src/tests/errors/types/003.ura
// errors/types/003 — unknown type in variable declaration
use "@/header"

main():
    x Widget
    output("hi\n")
